--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
     <description>GFL_Microservice_2</description>
     <properties>
         <java.version>11</java.version>
-        <okhttp-version>2.7.5</okhttp-version>
+        <okhttp-version>4.10.0</okhttp-version>
+        <jackson-databind.version>2.14.0</jackson-databind.version>
     </properties>
     <dependencies>
         <dependency>
@@ -24,9 +25,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.squareup.okhttp</groupId>
+            <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>${okhttp-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
         </dependency>
 
         <dependency>
