--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <java.version>11</java.version>
         <okhttp-version>4.10.0</okhttp-version>
         <jackson-databind.version>2.14.0</jackson-databind.version>
+        <mockito-core-version>4.8.0</mockito-core-version>
+        <awaitility-version>4.2.0</awaitility-version>
     </properties>
     <dependencies>
         <dependency>
@@ -31,9 +33,23 @@
         </dependency>
 
         <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-databind.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core-version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -44,6 +60,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
