--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+solace.jms.host=tcps://mr-connection-7nic02oyzh0.messaging.solace.cloud:55443
+solace.jms.msg-vpn=gfl-qa-automation-cluster
+solace.jms.client-username=solace-cloud-client
+solace.jms.client-password=524r85vnd5qq2n1tg7u6mv9q7s
